# Web

Lesson_1/: UML_bot.dio  classes.py  main.py  notebook.py  ordered_folders.py  task11.py  task12.py
Lesson_10/: pyproject.toml
Lesson_10/hw_project/hw_project/: settings.py  urls.py
Lesson_10/hw_project/quotes/: models.py  urls.py  views.py
Lesson_10/hw_project/quotes/migrations/: 0001_initial.py
Lesson_10/hw_project/quotes/static/quotes/: style.css
Lesson_10/hw_project/quotes/templates/quotes/: base.html  login.html  registration.html  tag_detail.html
Lesson_10/hw_project/utils/: add_quotes_to_mongo.py
Lesson_11/: main.py  pyproject.toml
Lesson_11/migrations/versions/: e008de626a78_init.py
Lesson_11/src/: schemas.py
Lesson_11/src/database/: connect.py  models.py
Lesson_11/src/repository/: humans.py
Lesson_11/src/routes/: humans.py
Lesson_12/: main.py  pyproject.toml
Lesson_12/migrations/versions/: b49edf807c71_init.py  fd1fe01ded56_add_user.py
Lesson_12/src/: schemas.py
Lesson_12/src/database/: models.py
Lesson_12/src/routes/: auth.py  humans.py
Lesson_12/src/services/: auth.py
Lesson_13/Part_1_FastAPI/: pyproject.toml
Lesson_13/Part_1_FastAPI/migrations/versions/: d922ee1a7aa9_init.py
Lesson_13/Part_1_FastAPI/src/database/: connect.py
Lesson_13/Part_1_FastAPI/src/repository/: humans.py
Lesson_13/Part_1_FastAPI/src/routes/: auth.py  humans.py  users.py
Lesson_13/Part_1_FastAPI/src/services/: auth.py  email.py
Lesson_13/Part_1_FastAPI/src/services/templates/: email_template.html
Lesson_13/Part_2_Django/: pyproject.toml
Lesson_13/Part_2_Django/hw_project/hw_project/: settings.py  urls.py
Lesson_13/Part_2_Django/hw_project/quotes/: admin.py  urls.py  utils.py  views.py
Lesson_13/Part_2_Django/hw_project/quotes/templates/quotes/: add_author.html  add_quote.html  author_detail.html  index.html  login.html  registration.html
Lesson_13/Part_2_Django/hw_project/quotes/templatetags/: extract.py
Lesson_13/Part_2_Django/hw_project/users/: forms.py
Lesson_13/Part_2_Django/hw_project/utils/: migration.py
Lesson_14/: main.py  pyproject.toml  test.db
Lesson_14/docs/source/: conf.py  index.rst
Lesson_14/migrations/versions/: 5f935ead7e75_add_avatar.py
Lesson_14/src/: schemas.py
Lesson_14/src/database/: models.py
Lesson_14/src/repository/: humans.py  users.py
Lesson_14/src/routes/: auth.py  humans.py  users.py
Lesson_14/src/services/: auth.py  email.py
Lesson_14/tests/: conftest.py  test_unit_repository_humans.py  test_unit_repository_users.py
Lesson_2/bot_docker/: Dockerfile  Pipfile  classes.py  requirements.txt
Lesson_2/bot_poetry/: pyproject.toml
Lesson_2/bot_poetry/bot_poetry/: funcs.py  textmatch.py
Lesson_3/: factorize.py  sorting_pool.py
Lesson_4/: main.py
Lesson_5/: main.py
Lesson_6/: database.db  main.py  query_1.sql  query_10.sql  query_11.sql  query_12.sql  query_2.sql  query_3.sql  query_5.sql  query_6.sql  query_7.sql  query_8.sql  query_9.sql
Lesson_7/: config.ini  my_select.py  pyproject.toml  seed.py
Lesson_7/migrations/versions/: c9cca2e4d990_init.py
Lesson_8/hw_8-1/: config.ini  connect.py  main.py  models.py  pyproject.toml  seeds.py
Lesson_8/hw_8-2/: consumer.py  models.py  producer.py
Lesson_9/: config.ini  connect.py  main.py  parsing.py  pyproject.toml
