[tool.poetry]
name = "hw-11"
version = "0.1.0"
description = ""
authors = ["Sergey-8057 <erste_sergey@mail.ru>"]
readme = "README.md"
packages = [{include = "hw_11"}]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.22"
fastapi = "^0.103.2"
psycopg2-binary = "^2.9.9"
alembic = "^1.12.0"
pydantic = {extras = ["email"], version = "^2.4.2"}
uvicorn = {extras = ["standard"], version = "^0.23.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
