[tool.poetry]
name = "home-work-12"
version = "0.1.0"
description = ""
authors = ["Sergey-8057 <erste_sergey@mail.ru>"]
readme = "README.md"
packages = [{include = "home_work_12"}]

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.12.0"
psycopg2-binary = "^2.9.9"
fastapi = "^0.104.0"
sqlalchemy = "^2.0.22"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
pydantic = {extras = ["email"], version = "^2.4.2"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
